[fix]: scrollbar error fixed

--- a/src/components/auth/css/backgroundBase.module.css
+++ b/src/components/auth/css/backgroundBase.module.css
@@ -8,7 +8,7 @@
 }
 
 .background-base--black {
-    overflow: auto;
+    overflow: hidden;
     width: 100%;
     height: 100%;
     position: fixed;
@@ -49,7 +49,7 @@
 }
 
 .background-base--white {
-    overflow: auto;
+    overflow: hidden;
     width: 100%;
     height: 100%;
     position: fixed;
